<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">calculadora</string>

    <!-- NUMEROS -->
    <string name="uno">1</string>
    <string name="dos">2</string>
    <string name="tres">3</string>
    <string name="cuatro">4</string>
    <string name="cinco">5</string>
    <string name="seis">6</string>
    <string name="siete">7</string>
    <string name="ocho">8</string>
    <string name="nueve">9</string>
    <string name="cero">0</string>
    <string name="suma">+</string>
    <string name="resta">-</string>
    <string name="multiplicar">x</string>
    <string name="dividir">÷</string>
    <string name="igual">=</string>
    <string name="porciento">%</string>
    <string name="C">C</string>
    <string name="CeroCero">00</string>

</resources>