<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/txtText"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="10dp"
        android:background="#DFDFDF"
        android:textSize="23dp"
        android:enabled="false"
        android:textColor="#000"
        android:ems="10"
        android:inputType="text" >
    </EditText>

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#000000" >

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/botonC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/miboton"
                android:text="@string/C" />

            <Button
                android:id="@+id/botonDiv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="@drawable/miboton"
                android:text="@string/dividir" />

            <Button
                android:id="@+id/botonMult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="@drawable/miboton"
                android:text="@string/multiplicar" />

            <Button
                android:id="@+id/botonPorciento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="@drawable/miboton"
                android:text="@string/porciento" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/boton7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/miboton"
                android:text="@string/siete" />

            <Button
                android:id="@+id/boton8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="@drawable/miboton"
                android:text="@string/ocho" />

            <Button
                android:id="@+id/boton9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="@drawable/miboton"
                android:text="@string/nueve" />

            <Button
                android:id="@+id/botonMas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/miboton"
                android:text="@string/suma" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/boton4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="@drawable/miboton"
                android:text="@string/cuatro" />

            <Button
                android:id="@+id/boton5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="@drawable/miboton"
                android:text="@string/cinco" />

            <Button
                android:id="@+id/boton6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/miboton"
                android:text="@string/seis" />

            <Button
                android:id="@+id/botonMenos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="@drawable/miboton"
                android:text="@string/resta" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/boton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/miboton"
                android:text="@string/uno" />

            <Button
                android:id="@+id/boton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/miboton"
                android:text="@string/dos" />

            <Button
                android:id="@+id/boton3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/miboton"
                android:text="@string/tres" />

            <Button
                android:id="@+id/botonIgual"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="@drawable/miboton"
                android:text="@string/igual" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/botonCero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_span="3"
                android:background="@drawable/miboton"
                android:text="@string/cero" />

            <Button
                android:id="@+id/boton00"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="@drawable/miboton"
                android:text="@string/CeroCero" />
        </TableRow>
    </TableLayout>

</LinearLayout>